html files second commit

--- a/index.html
+++ b/index.html
@@ -117,6 +117,14 @@
                     Buger was a dynamic and fully responsive website developed during Internship @ Cine Carper Private Limited. This website highlights various features of their movie review application named "Buger" with other necessary details.
                 </p>
             </div>
+            <div class="min-container">
+                <p>
+                    This entertainment startup company developed Buger for people who not only like streaming content but at the same time wish to rate it, review it and engage with similar peers.
+                </p>
+            </div>
+            <div class="min-container home">
+                <img src="images/work-4.3.jpg" alt="Buger Website - Menu Page - Internship at Cine Carper Private Limited" width="200"></img>
+            </div>
         </div>
 	</main>
     <!-- FOOTER STARTS -->
