--- a/awwdelish.html
+++ b/awwdelish.html
@@ -46,13 +46,27 @@
     <!-- HEADER ENDS -->
 
     <main id="main">
-        
+        <h1>Wondering what Shaivi is outside work?</h1>
+		<hr>
+        <h3>I am a Food Blogger, a cook and an artist!!!!!!!!!!</h3>
+        <p>I started the journey of being a foodblogger in the name of "Aww,Delish!" in 2020 and I have been successfully carrying it up till now.</p>
+	
+			<p>I spread love on Instagram and Facebook page in form of reel recipe videos, food photography, restuarant reviews and many more things.</p>
+	
+			<p>In free time you can find me in my kitchen cooking great food or else in restaurants, trying, reviewing and enjoying great food! I do various type of content creations, video editing, reel, posts and collaborations and hence food is my source of skills, too.</p>
+	
+			<p>Click <a href = "https://www.instagram.com/awwdelish/?hl=en"> AWWDELISH </a> to explore more!</p>
+        <div id="instagram-feed1" class="instagram_feed"></div>
     </main>
     <!-- FOOTER STARTS -->
     <footer>
 		<p>Shaivi Ajay Ganatra &copy; 2022</p>
 	</footer>
     <!-- FOOTER ENDS -->
+    <!-- Link to JQuery JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- Link to Instagram Graph JS -->
+    <script src="js/jquery-feed-instagram-graph.js"></script>
     <!-- Link to bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
