--- a/about.html
+++ b/about.html
@@ -5,6 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-PX1TH9YE8F"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-PX1TH9YE8F');
+	</script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Link to the favicon image -->
+	<link rel="icon" href="images/favicon.ico">
+	<!-- Link to Google fonts -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
     <!-- Link to the reset file -->
 	<link rel="stylesheet" href="css/html5reset.css">
     <!-- Link to bootstrap css -->
@@ -57,7 +74,7 @@
                 </p>
             </div>
             <div class="min-container-flex about">
-                <img src="images/knowshaivi-4.jpg" alt="Girl posing besides the house in and blue and white tee dress" width="200"></img>
+                <img src="images/knowshaivi-4.JPG" alt="Girl posing besides the house in and blue and white tee dress" width="200"></img>
             </div>
             <div class="min-container-flex about">
                 <img src="images/knowshaivi-3.jpg" alt="Girl posing in front of a huge true on a sunny day in Ann Arbor" width="200"></img>
