--- a/writings.html
+++ b/writings.html
@@ -14,8 +14,6 @@
 
 	gtag('config', 'G-PX1TH9YE8F');
 	</script>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Link to the favicon image -->
 	<link rel="icon" href="images/favicon.ico">
 	<!-- Link to Google fonts -->
@@ -61,7 +59,6 @@
           <!-- NAV ENDS -->
     </header>
     <!-- HEADER ENDS -->
-
     <main id="main">
         <h1>Some Writings</h1>
 		<hr>
@@ -90,7 +87,24 @@
                 <img src="images/blog-3.jpg" alt="Basic web development blog where a girl illustration exists holding html tag" width="200"></img>
             </div>
         </div>
+
+            <div class="flip-card">
+              <div class="flip-card-inner" tab-index="0">
+                <div class="flip-card-front">
+                  <h2>Follow me on</h2>
+                </div>
+                <div class="flip-card-back">
+                    <ul>
+                        <li><a href="https://www.linkedin.com/in/shaiviganatra/"> LinkedIn </a></li>
+                        <li><a href="https://github.com/ShaiviGanatra"> GitHub </a></li>
+                        <li><a href="https://shaiviganatra.medium.com/"> Medium </a></li>
+                    </ul>
+                </div>
+              </div>
+            </div>
+
     </main>
+    
     <!-- FOOTER STARTS -->
     <footer>
 		<p>Shaivi Ajay Ganatra &copy; 2022</p>
